--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
+#=== Gameserver ===
 node_modules
+logs
+*.log
+
+
+#=== OSX ===
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+#=== Linux ===
+*~
+.directory
+.Trash-*
+
+#=== Windows ===
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
