--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.0.5",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "winston": "^1.0.1"
   }
 }
