--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "express-winston": "^0.4.1",
     "jsonwebtoken": "^5.0.5",
     "socket.io": "^1.3.6",
     "winston": "^1.0.1"
