--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.13.3",
     "express-winston": "^0.4.1",
     "jsonwebtoken": "^5.0.5",
+    "mongoose": "^4.1.4",
     "socket.io": "^1.3.6",
     "winston": "^1.0.1"
   }
