--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-winston": "^0.4.1",
     "jsonwebtoken": "^5.0.5",
     "mongoose": "^4.1.4",
+    "morgan": "^1.6.1",
     "socket.io": "^1.3.6",
     "winston": "^1.0.1"
   }
